Name:                   rsb
Version:                0.0.1
Author:                 Trygve Laugstøl <trygvis@inamo.no>
Maintainer:             Trygve Laugstøl <trygvis@inamo.no>
License:                BSD3
Synopsis:               RESTful middleware
Description:            A library for building efficient REST services
Category:               Network
Cabal-Version:          >= 1.6
Build-Type:             Simple

Library
  Build-Depends:        base >= 4 && < 5, parsec, webserver, c10k, bytestring >= 0.9.1.4 && < 0.9.1.6, filepath, time, datetime, regex-posix, HTTP
  Exposed-Modules:      Network.Rest.Cli.Rsb,
                        Network.Rest.Rsb,
                        Network.Rest.WebServer,
                        Network.Rest.C10k

Executable GitHubRsb
  Main-Is:              GitHubRsb.hs
  Extensions:           ScopedTypeVariables
  Other-Modules:        Network.Rest.Rsb,
                        Network.Rest.WebServer,
                        Network.Rest.C10k

Executable MyApp1
  Main-Is:              MyApp1.hs
  Other-Modules:        Network.Rest.Cli.Rsb

Executable MyApp2
  Main-Is:              MyApp2.hs
  Build-Depends:        hxt, hxt-filter
  Other-Modules:        Network.Rest.Cli.Rsb
